sqlmap (0.6.4-1) stable; urgency=low

  * Major improvement to the comparison algorithm to make it work also if
    the page content changes at each refresh; (work in progress)
  * Minor enhancement to support an option (--is-dba) to show if the
    current user is a database management system administrator;
  * Added support internally to forge CASE statements, used only by
    --is-dba query at the moment;
  * Major bug fix to avoid tracebacks when multiple targets are specified
    and one of them is not reachable;
  * Minor bug fix to make the --postfix work even if --prefix is not
    provided;

 -- Bernardo Damele A. G. <bernardo.damele@gmail.com>  Day, DD MMM 2009 10:00:00 +0000

sqlmap (0.6.3-1) stable; urgency=low

  * Major enhancement to get list of targets to test from Burp proxy
    (http://portswigger.net/suite/) requests log file path or WebScarab
    proxy (http://www.owasp.org/index.php/Category:OWASP_WebScarab_Project)
    'conversations/' folder path by providing option -l <filepath>;
  * Major enhancement to support Partial UNION query SQL injection
    technique too;
  * Major enhancement to test if the web application technology supports
    stacked queries (multiple statements) by providing option
    --stacked-test which will be then used someday also by takeover
    functionality;
  * Major enhancement to test if the injectable parameter is affected by
    a time based blind SQL injection technique by providing option
    --time-test;
  * Minor enhancement to fingerprint the web server operating system and
    the web application technology by parsing some HTTP response headers;
  * Minor enhancement to fingerprint the back-end DBMS operating system by
    parsing the DBMS banner value when -b option is provided;
  * Minor enhancement to be able to specify the number of seconds before
    timeout the connection by providing option --timeout #, default is set
    to 10 seconds and must be 3 or higher;