@@ -79,8 +79,8 @@ delay = 0
 
 # Seconds to wait before timeout connection.
 # Valid: float
-# Default: 10
-timeout = 10
+# Default: 30
+timeout = 30
 
 
 [Injection]
