@@ -2,6 +2,10 @@ sqlmap (0.6.4-1) stable; urgency=low
 
   * Major improvement to the comparison algorithm to make it work also if
     the page content changes at each refresh; (work in progress)
+  * Major enhancement to support SQL data definition statements, SQL data
+    manipulation statements, etc from user in SQL query and SQL shell if
+    stacked queries are supported by the web application technology in
+    use;
   * Minor enhancement to support an option (--is-dba) to show if the
     current user is a database management system administrator;
   * Added support internally to forge CASE statements, used only by
